Fix wrapping of context menu buttons in localized versions. Needs a CSS way to set the width, maybe I'm overlooking something. Closes #684

--- a/src/mapml.css
+++ b/src/mapml.css
@@ -259,7 +259,7 @@
   background-color: #fff;
   cursor: default;
   position: absolute;
-  width: 160px;
+/*  width: 160px;*/ /* how to calculate in CSS? See ContextMenu.js L111-L117 for style attribute hack */
   z-index: 10001;
 }
 
